# singularity-notes

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  article.md  config.yaml  contributing.md  cron_job.sh  pyproject.toml  recent_astronomy_papers.md  requirements.txt  run_pipeline.py  used_articles.json
.github/workflows/: ci  cron_job.yml  deploy-app.yaml  hugo.yml
app/: config.yml
app/content/posts/: article.md  article_1756041746.md  article_1756246396.md  article_1756334660.md  article_gpt-4.1-nano_1753450037.md  article_gpt-4.1-nano_1753451343.md  post_1756113702.md  post_1756246396.md  post_1756334089.md  post_1756479264.md  post_1756518429.md  post_1756605517.md  post_1756692525.md  post_1756778143.md  post_1756940844.md  post_1756950395.md  post_1757036943.md  post_1757123122.md  post_1757210064.md  post_1757296447.md  post_1757555221.md  post_1757727503.md  post_1757814643.md  post_1757987038.md  post_1758332527.md  post_1758591897.md  post_1758937315.md  post_1759830710.md  post_1759974381.md  post_1760406404.md  post_1760751755.md  post_1760839153.md  post_1761093542.md  post_1762135727.md  post_1762740629.md  post_1763345201.md  post_1763950410.md  post_1764556373.md  post_1765159845.md  post_1766975475.md  (+10 more)
app/public/: 404.html  index.html  index.json  index.xml  robots.txt  sitemap.xml
app/public/assets/css/: stylesheet.d8c43bd0af1b5bbb4d386d4c1c720f8dac2c347f41fb606d224caaffe5edc398.css
app/public/categories/: index.html  index.xml
app/public/page/1/: index.html
app/public/posts/: index.html  index.xml
app/public/posts/article_1755959180/: index.html
app/public/posts/article_1756041746/: index.html
app/public/posts/page/1/: index.html
app/public/tags/: index.html  index.xml
app/themes/hugo-PaperMod/: theme.toml
app/themes/hugo-PaperMod/assets/css/common/: post-entry.css
app/themes/hugo-PaperMod/layouts/_default/: baseof.html  single.html
app/themes/hugo-PaperMod/layouts/partials/: head.html  home_info.html  index_profile.html
output/: article.md  arxiv_articles.json  best_article.json  raw_post.md
src/: 1_get_arxiv_articles.py  2_select_best_article.py  3_create_article.py  4_setup_post.py  create article.py  create_article.py  get_arxiv_articles.py  get_arxiv_data.py  get_best_article.py  post_template.txt  prompt_create_article.txt  prompt_select_best_article.txt  run_pipeline.py  select_best_article.py  setup_post.py  use_llm.py  utils.py
src/resources/: article_schema.json  prompt_create_article.txt  prompt_create_post.txt
src/singularity_notes/: main.py  utils.py
src/singularity_notes/resources/: prompt_create_post.txt  prompt_select_best_article.txt  used_articles.json
src/singularity_notes/stages/: create_raw_post.py  get_arxiv_articles.py  select_best_article.py  setup_post.py
src/stages/: create_article.py  create_raw_post.py  get_arxiv_articles.py  select_best_article.py  setup_post.py
tests/: test_utils.py
tests/data/: empty_title.json  good_post.json  missing_title_property.json
tests/data/invalid_json/: empty_section_content.json  empty_section_header.json
tests/unit_tests/: test_utils.py
tests/unit_tests/data/invalid_json/: empty_sections.json  empty_subtitle.json  missing_sections_property.json  missing_subtitle_property.json
