[project]
name = "nebula-notes-blog"
version = "0.1.0"
description = ""
authors = [{ name = "Alberto Ursino", email = "Alberto.Ursino@k-ai.at" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "hugo (>=0.148.1,<0.149.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai (>=1.97.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
