[project]
name = "singularity-notes"
version = "0.1.0"
description = "Fully automated blog delivering posts written by AI on the latest astronomy discoveries."
authors = [{ name = "Alberto Ursino", email = "Alberto.Ursino@k-ai.at" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "hugo (>=0.148.1,<0.149.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai (>=1.97.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "poethepoet (>=0.36.0,<0.37.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
]

[project.optional-dependencies]
dev = ["pytest (>=8.4.1,<9.0.0)"]

[tool.poetry]
package-mode = false

[tool.ruff]
exclude = []
line-length = 90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
app = "hugo server -D --source app"
pipe = "python run_pipeline.py"
